# Flask_poetry_Project

./: README.md  details2.db  model_pkl  pyproject.toml
Poetry/: pyproject.toml
Poetry/project/: app.py  example.db  example.sqbpro  pyproject.toml  test_app.py
Rest/restapi/: Pipfile  pyproject.toml  requirements.txt  rest_app.py
Rest/restapp/: Dockerfile  pyproject.toml  requirements.txt  rest_app.py
Rest/restapp/tests/: test_restapp.py
project1/: app.py
temp/: Dockerfile  app.py  compose.yaml  pyproject.toml  requirements.txt
tempenv/Scripts/: activate  activate.bat
tests/: test_project1.py
