[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["AniketJawale17 <aniketjawale16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Pydantic = "^0.10.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
